2005-01-31  Not Zed  <NotZed@Ximian.com>

	** See bug #71521.

	* em-account-editor.c (emae_url_set_hostport): dont ever set a
	NULL host.

2005-01-28  Not Zed  <NotZed@Ximian.com>

	** See bug #71520.
	
	* em-account-prefs.c (account_edit_clicked): repeat the nasty hack
	from account_edit, to refresh the list after edit.

2005-01-27  Not Zed  <NotZed@Ximian.com>

	* See bug #69815.
	
	* mail-component.c (impl_quit): shutdown vfolders as first step.

	* mail-vfolder.c (vfolder_setup_do): if we're shutdown during
	processing, just noop.
	(vfolder_adduri_do): same.
	(mail_vfolder_shutdown): set the shutdown flag.

2005-01-27  Rodney Dawes  <dobey@novell.com>

	* mail-config.glade: Fix the labels in the account druid to be
	left aligned, and justified left
	Fix the border and spacing for all the vboxes in the account druid
	pages to be HIG compliant
	Fix the account naming info label to be more concise

	Fixes #68696

2005-01-27  Rodney Dawes  <dobey@novell.com>

	* mail-send-recv.c (build_dialog): Fix the dialog to have borders
	that are HIG-compliant and fix up the spacing and padding of the
	internal widgets to do the right thing to be HIG compliant

2005-01-27  JP Rosevear  <jpr@novell.com>

	* em-format-hook.c: add a d(x) debugging define and default to off

2005-01-26  Mengjie Yu  <meng-jie.yu@sun.com>

	Fixes #71774 

	* em-folder-tree.c (emft_popup_rename_folder): we should check
	whether the 'new_name' is a NULL pointer to avoid Evolution
	crashes.

2005-01-25  Mengjie Yu  <meng-jie.yu@sun.com>

	* em-mailer-prefs.c: (restore_labels_clicked),
	(em_mailer_prefs_construct):
	add a11y names for color pickers.

2005-01-24  Hans Petter Jansson  <hpj@novell.com>

	* Makefile.am (libevolution_mail_la_LIBADD): Pull in the contact
	editors, so we can pass pointers to their creation functions to
	ENameSelectorEntry.

2005-01-24  JP Rosevear  <jpr@novell.com>

	* searchtypes.xml: add back body contains

2005-01-21  JP Rosevear  <jpr@novell.com>

	Fixes #46287
	