@@ -1,5 +1,10 @@
 2005-01-31  Not Zed  <NotZed@Ximian.com>
 
+	** See bug #69850
+	
+	* mail-autofilter.c (rule_from_message): dont crash if we're
+	missing the requested headers.
+
 	** See bug #71521.
 
 	* em-account-editor.c (emae_url_set_hostport): dont ever set a
